--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/cloudflare": "^10.0.2",
     "@astrojs/sitemap": "^3.1.2",
     "@astrojs/starlight": "^0.21.3",
     "@astrojs/starlight-tailwind": "^2.0.1",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.5.0",
     "astro": "^4.5.12",
     "astro-compressor": "^0.4.1",
     "globby": "^14.0.1",
